--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -45,7 +45,7 @@ jobs:
       - uses: ShiftLeftSecurity/scan-action@master
         with:
           type: "credscan,java,depscan"
-      - uses: action/upload-artifact@master
+      - uses: actions/upload-artifact@master
         with:
           name: SLSCAN reports
           path: ${{ github.workspace }}/reports
